Service & Company updates

--- a/src/components/ServiceCards.astro
+++ b/src/components/ServiceCards.astro
@@ -6,49 +6,55 @@ const cards = [
     description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
     image: "/assets/first-card.png",
     overlay_text: "Aerospace and Defense",
-    pdfLink: "/assets/Aerospace_and_Defense.pdf"
   },
   {
     title: "Evaluate and improve your product concept",
     description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
     image: "/assets/third-card.png",
-    overlay_text: "Automotive"
+    overlay_text: "Automotive",
+    pdfLink:"/assets/Automotive.docx"
   },
   {
     title: "Evaluate and improve your product concept",
     description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
     image: "/assets/second-card.png",
-    overlay_text: "Banking"
+    overlay_text: "Banking",
+    pdfLink:"/assets/Banking.docx"
   },
   {
     title: "Evaluate and improve your product concept",
     description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
     image: "/assets/first-card.png",
-    overlay_text: "Communication and Media"
+    overlay_text: "Communication and Media",
+    pdfLink:"/assets/Media_and_Communication.docx"
   },
   {
     title: "Evaluate and improve your product concept",
     description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
     image: "/assets/first-card.png",
-    overlay_text: "Consumer Goods and Services"
+    overlay_text: "Consumer Goods and Services",
+    pdfLink:"/assets/Customer_Goods and_Services.docx"
   },
   {
     title: "Evaluate and improve your product concept",
     description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
     image: "/assets/first-card.png",
-    overlay_text: "Energy"
+    overlay_text: "Energy",
+    pdfLink:"/assets/Energy.docx"
   },
   {
     title: "Evaluate and improve your product concept",
     description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
     image: "/assets/first-card.png",
-    overlay_text: "Health"
+    overlay_text: "Health",
+    pdfLink:"/assets/Health_and_Pharma.docx"
   },
   {
     title: "Evaluate and improve your product concept",
     description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
     image: "/assets/first-card.png",
-    overlay_text: "Insurance"
+    overlay_text: "Insurance",
+    pdfLink:"/assets/Insurance.docx"
   },
   {
     title: "Evaluate and improve your product concept",
@@ -66,13 +72,15 @@ const cards = [
     title: "Evaluate and improve your product concept",
     description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
     image: "/assets/first-card.png",
-    overlay_text: "Travel"
+    overlay_text: "Travel",
+    pdfLink:"/assets/Travel.docx"
   },
   {
     title: "Evaluate and improve your product concept",
     description: "Leverage our data-driven approach, powered by AI, to conduct a deep analysis of your product idea. We identify market potential and target audience, providing actionable insights to ensure your product matters to the right people.",
     image: "/assets/first-card.png",
-    overlay_text: "Utilities"
+    overlay_text: "Utilities",
+    pdfLink:"/assets/Oil-Gas-Utilities.docx"
   },
   // Add more card data here...
 ];
