--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -5,6 +5,9 @@ import Marquee from "../../components/marquee.astro";
 import Footer from "../../components/Footer.astro";
 import Navbar2 from "../../components/Navbar2.astro";
 import ContactForm from '../../components/ContactForm.astro';
+import KuldeepImage from "../../../public/assets/Kuldeep.jpg";
+import PradeepImage from "../../../public/assets/Pradeep.jpeg";
+import VishwaImage from "../../../public/assets/Vishwa.jpg";
 
 const sections = [
     {
@@ -34,58 +37,56 @@ const sections = [
 <Layout title="CX-Point">
     <div class="w-full h-full bg-[#E7E7D6]">
         <Navbar2/>
-        <div class="w-full min-h-screen px-2 lg:px-40 py-20">
+        <div class="w-full min-h-screen px-2 lg:px-32 py-20">
             <div class="w-full pt-24">
                 <div class="w-full h-full overflow-hidden">
-                    <p class="text-[25px] lg:text-[80px] akira animated-text ">With over 17 years of design</p>
+                    <p class="text-[25px] lg:text-[60px] akira animated-text ">With over 20+ years of combined</p>
                 </div>
                 <div class="w-full h-full overflow-hidden">
-                    <p class="text-[25px] lg:text-[80px] akira animated-text">experience, we’re here to</p>
+                    <p class="text-[25px] lg:text-[60px] akira animated-text">contact center experience, we’re here to</p>
                 </div>
                 <div class="w-full h-full overflow-hidden">
-                    <p class="text-[25px] lg:text-[80px] akira animated-text">solve real problems and drive</p>
+                    <p class="text-[25px] lg:text-[60px] akira animated-text">solve real business problems with CX</p>
                 </div>
                 <div class="w-full h-full overflow-hidden">
-                    <p class="text-[25px] lg:text-[80px] akira animated-text">your business forward.</p>
+                    <p class="text-[25px] lg:text-[60px] akira animated-text">automation solutions powered by AI</p>
                 </div>
             </div>
             <div class="w-full flex px-0 lg:px-18 pt-14 lg:pt-2">
                 <div class="w-full h-full pt-12">
-                    <p class="text-[20px] font-bold">
+                    <p class="text-[25px] font-bold">
                         Who we are
                     </p>
                     <div class="text-[16px] font-semibold text-gray-500">
-                        Sure! Here’s a 200-word passage of Lorem Ipsum text:
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit. 
+                        At CXPoint, we have experience of providing Contact Center consulting and implementation services to small and large businesses for over two decades. Our journey started with a passion for Contact Center Networks, Next Generation Contact center technology platform and a desire to help global businesses succeed in implementing Cloud Contact Center solutions successfully. Today, we are proud to have helped numerous clients optimize their transformation journey from on-prem legacy to Cloud based CCaaS solution using our Bespoke solutions for CCaaS platforms and help customers achieve their business goals.​
                     </div>
                 </div>
             </div>
             <div class="w-full flex flex-col lg:flex-row gap-10 lg:gap-0 px-0 lg:px-18 pt-6">
                 <div class="w-full lg:w-[50%] h-full flex items-center lg:pt-12 opaq">
                     <div>
-                        <p class="text-[20px] font-bold">
-                            Our Mission
+                        <p class="text-[25px] font-bold">
+                            Our Expertise
                         </p>
                         <div class="text-[16px] font-semibold text-gray-500">
-                            Founded by Tom Garcy, a designer who's spent nearly two decades in the industry, we focus on solving your real-world challenges. It's not about fancy designs or promises that dont deliver. It's about crafting solutions that can help you grow, engage users and get real results.
+                            Our expertise - Our team of Cloud Contact Center and AI professionals has expertise in a wide range of CCaaS solutions, as well as designing and developing BESPOKE solutions to meet business needs for successful faster implementation. We leverage our experience of CCaaS products and expertise on cloud design ,implementation, Cloud contact center security, Generative AI based custom solutions for cloud contact center, and more. We stay up-to-date with the latest trends and best practices in the contact center industry to provide our clients, together with our partners the best possible solutions.
                         </div>
                     </div>
                 </div>
                 <div class="w-full lg:w-[50%] h-full flex flex-col lg:flex-row items-center lg:p-12 opaq">
                     <div>
-                        <p class="text-[20px] font-bold">
-                            Our Vision
+                        <p class="text-[25px] font-bold">
+                            Our Clients
                         </p>
                         <p class="text-[16px] font-semibold text-gray-500">
-                            We don't just create designs - we solve your problems. It all starts with listening. We dive deep into understanding your business, your challenges, and your goals. Then we use data, creativity and practical solutions to craft a plan that works. No unnecessary extras, no bloated budgets - just what makes sense for you.  
+                            We work with a diverse range of small to global fortune 500 companies across various industries, from small to established companies which have major contact center operations. Our clients have always appreciated our expertise on Automation products as we well as transparent and personalized, value led approach to driving Contact Center Migration , Contact Center Transformation and platform management services program to gain successful outcomes. We are always committed to our clients success.
                         </p>
                     </div>
                 </div>
             </div>
             <div class="w-full flex px-0 lg:px-18 pt-10" id="locations">
                 <div class="w-full h-full lg:pt-12">
-                    <p class="text-[20px] font-bold">
+                    <p class="text-[25px] font-bold">
                         World Wide Locations
                     </p>
                     <p class="text-[16px] font-semibold text-gray-500">
@@ -107,7 +108,7 @@ const sections = [
         <div class="mt-0 lg:mt-20">
             <Marquee />
         </div>
-        <div class="w-full h-screen flex flex-col items-center justify-around px-4 lg:px-40 space-y-4 lg:my-28 my-14 gap-10">
+        <!-- <div class="w-full h-screen flex flex-col items-center justify-around px-4 lg:px-40 space-y-4 lg:my-28 my-14 gap-10">
             {sections.map((section) => (
                 <div class="w-full flex lg:flex-row flex-col justify-center lg:justify-between items-start lg:items-center lg:space-y-14 space-y-8">
                     <div class="flex items-start justify-center gap-2">
@@ -120,16 +121,16 @@ const sections = [
                 </div>
                 <hr class="w-full my-2 lg:my-4 border-t border-gray-300" />
             ))}
-        </div>
+        </div> -->
 
 
-        <div class="w-full h-fit mt-32 lg:mt-20 lg:pt-8 lg:px-40 flex flex-col items-start justify-around lg:justify-between">
+        <div class="w-full h-fit mt-32 lg:mt-20 lg:pt-8 lg:px-32 flex flex-col items-start justify-around lg:justify-between">
             <div class="lg:w-[60%] akira text-4xl ">
                 <div class="flex lg:flex-row flex-col gap-2 px-2 lg:px-0">
                     <img src={astrix.src} alt="astrix" class="w-[30px] h-[30px] astrix" />
-                    <p class="text-lg lg:text-2xl lg:flex hidden">And let’s be clear, we hate wasting time or money.</p>
+                    <p class="text-lg lg:text-3xl lg:flex hidden">And let’s be clear, we hate wasting time or money.</p>
                 </div>
-                <p class="text-xl lg:text-2xl lg:px-0 px-2">We don’t inflate our budgets just because we think you won’t accept our hourly rate. In fact, we don’t care about hourly rates. Thanks to our experience, we work at lightning speed. We focus on getting things done efficiently, without cutting corners.</p>
+                <p class="text-xl lg:text-3xl lg:px-0 px-2">We don’t inflate our budgets just because we think you won’t accept our hourly rate. In fact, we don’t care about hourly rates. Thanks to our experience, we work at lightning speed. We focus on getting things done efficiently, without cutting corners.</p>
             </div>
 
             <div id="testimonial" class="testimonial-content-sticky w-full flex flex-wrap items-center justify-center lg:mt-20" style="overflow-x: hidden;">
@@ -137,32 +138,32 @@ const sections = [
                 <div class="testimonial-content-block-v2 hidden lg:flex gap-10">
                     <div class="testimonial-single-card-block">
                         <div class="testimonial-image-block">
-                            <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0b2e9f8328911bfe1_loren.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0b2e9f8328911bfe1_loren-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0b2e9f8328911bfe1_loren.png 800w" alt="" class="testimonial-image">
+                            <img src={KuldeepImage.src} loading="lazy" alt="" class="testimonial-image">
                         </div>
                         <div class="testimonial-content-block">
-                            <h3 class="testimonial-author-name font-bold">Loren</h3>
+                            <h3 class="testimonial-author-name font-bold">Kuldeep Sharma</h3>
                             <div class="testimonial-designation-text font-bold text-[#8D8D9B]">Project manager</div>
                         </div>
                     </div>
                     <div class="testimonial-single-card-block">
                         <div class="testimonial-image-block">
-                            <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0cad94a1b82e31b6a_david.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0cad94a1b82e31b6a_david-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0cad94a1b82e31b6a_david.png 801w" alt="" class="testimonial-image">
+                            <img src={PradeepImage.src} loading="lazy" alt="" class="testimonial-image">
                         </div>
                         <div class="testimonial-content-block">
-                            <h3 class="testimonial-author-name font-bold">David</h3>
-                            <div class="testimonial-designation-text font-bold text-[#8D8D9B]">UX Designer, Research</div>
+                            <h3 class="testimonial-author-name font-bold">Pradeep J</h3>
+                            <div class="testimonial-designation-text font-bold text-[#8D8D9B]">VP Sales & Service</div>
                         </div>
                     </div>
                     <div class="testimonial-single-card-block">
                         <div class="testimonial-image-block">
-                            <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d080115bb772af2a6c_helena.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d080115bb772af2a6c_helena-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d080115bb772af2a6c_helena.png 801w" alt="" class="testimonial-image">
+                            <img src={VishwaImage.src} loading="lazy" alt="" class="testimonial-image">
                         </div>
                         <div class="testimonial-content-block">
-                            <h3 class="testimonial-author-name font-bold">Helena</h3>
+                            <h3 class="testimonial-author-name font-bold">Vishwa M</h3>
                             <div class="testimonial-designation-text font-bold text-[#8D8D9B]">Brand Designer</div>
                         </div>
                     </div>
-                    <div class="testimonial-single-card-block">
+                    <!-- <div class="testimonial-single-card-block">
                         <div class="testimonial-image-block">
                             <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d06fbefee4ba36d54e_nizam.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d06fbefee4ba36d54e_nizam-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d06fbefee4ba36d54e_nizam.png 801w" alt="" class="testimonial-image">
                         </div>
@@ -188,7 +189,7 @@ const sections = [
                             <h3 class="testimonial-author-name font-bold">Tom</h3>
                             <div class="testimonial-designation-text font-bold text-[#8D8D9B]">Founder</div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- Mobile version (hidden on lg screens) -->
@@ -297,6 +298,20 @@ const sections = [
 </Layout>
 
 <style>
+
+    .testimonial-image{
+        width: 12rem;
+        height: 14rem;
+        object-fit: cover;
+        border-radius: 20%;
+        filter: grayscale(100%);
+        transition: filter 0.3s ease;
+    }
+
+    .testimonial-image:hover{
+        filter: grayscale(0%);
+    }
+
     .akira{
         font-family: 'new', sans-serif;
         font-weight: 700;
@@ -306,7 +321,7 @@ const sections = [
 
     #main {
     cursor: none;
-}
+    }
 
 #custom-cursor-product {
     position: fixed;
