--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -46,9 +46,7 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
         <div class="w-full lg:w-[30%] flex flex-col items-start justify-end"> 
             <div class="w-32 lg:w-48 h-2 lg:h-4 bg-[#ff6d00] mt-6 lg:mt-14 mb-6 dash"></div>
             <div class="w-full h-full font-semibold leading-none subtext">
-              The supply chains we need, the special effects that wow, the stadiums we fill, the food we eat, the
-              clothes we wear, the cars we drive, the homes where we live, the holidays we take, the trees we
-              grow—together, we can reinvent anything.
+                Customer experience is part of everyone’s life and are crucial for success across all industries. Global companies prioritize seamless experiences, empathetic care, and personalized support to drive loyalty, retention, and growth. By putting customers at the heart of their operations, businesses can build trust, reputation, and long-term success. We at CXPoint with customer first approach help them achieve this
             </div>
         </div>
     </div>
